--- a/locations.html
+++ b/locations.html
@@ -28,6 +28,7 @@
 							<li><a href="#">Site Map</a></li>
 							<li><a href="#">Contact Us</a></li>
 							<li><a href="#">About Us</a></li>
+							<li><a href="#">About Us</a></li>
 							<h1>hiiiii<h1>
 						</ul>
 					</div>
